<resources>
    <string name="app_name">JobFinderApp</string>
    <string name="Saved">Saved</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="job_salary_single">$%.0fk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="search_jobs">Search jobs...</string>
    <string name="filters">Filters</string>
    <string name="job_type">Job Type</string>
    <string name="full_time">Full-time</string>
    <string name="part_time">Part-time</string>
    <string name="contract">Contract</string>
    <string name="permanent">Permanent</string>
    <string name="category">Category</string>
    <string name="all_categories">All categories</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter location...</string>
    <string name="country">Country</string>
    <string name="select_country">Select country</string>
    <string name="sort_by">Sort By</string>
    <string name="salary">Salary</string>
    <string name="sort_direction">Sort Direction</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="search">Search!</string>
    <string name="clear_all">Clear All</string>
    <string name="no_saved_jobs">No Saved Jobs</string>
    <string name="jobs_you_save_will_appear_here_for_quick_access">Jobs you save will appear here for quick access.</string>
    <string name="it_s_empty_here_for_now_due_to_the_lack_of_network">It\'s empty here for now due to the lack of network.</string>
    <string name="waiting_for_network">Waiting for network...</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="salary_range">Salary Range</string>
    <string name="salary_1">Salary</string>
    <string name="about_the_role">About the Role</string>
    <string name="applied">Applied</string>
    <string name="browse_jobs">Browse Jobs</string>
    <string name="start_applying_to_jobs_to_see_them_here">Start applying to jobs to see them here</string>
    <string name="no_applications_yet">No Applications Yet</string>
    <string name="applied_on">Applied on:</string>
    <string name="withdraw_application">Withdraw Application</string>
    <string name="apply_now">Apply Now</string>
    <string name="are_you_sure_you_want_to_withdraw_your_application_for_this_job">Are you sure you want to withdraw your application for this job?</string>
    <string name="yes_withdraw">Yes, Withdraw</string>
    <string name="cancel">Cancel</string>
    <string name="there_are_no_results_for_your_search">There are no results for your search</string>
    <string name="try_changing_filters_or_entering_a_different_word">Try changing filters or entering a different word</string>
    <string name="application_submitted_successfully">Application submitted successfully!</string>
    <string name="no_reminders_yet">No Reminders Yet</string>
    <string name="create_reminders_on_job_detail_pages_to_keep_track_of_important_dates">Create reminders on job detail pages to keep track of important dates</string>
    <string name="reminders">Reminders</string>
    <string name="tittle">Title</string>
    <string name="e_g_follow_up_on_application">e.g., Follow up on application</string>
    <string name="message">Message</string>
    <string name="add_notes_about_this_reminder">Add notes about this reminder...</string>
    <string name="reminder_date_amp_time"><![CDATA[Reminder Date & Time]]></string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="create">Create</string>
    <string name="no_reminders_set_for_this_job">No reminders set for this job</string>
    <string name="overdue">Overdue</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="no_reminders">No reminders</string>
    <string name="reminder">reminder</string>
    <string name="select_country_01">Select Country</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="sort_by_salary">Sort by Salary</string>
    <string name="update">Update</string>
    <string name="retry">Retry</string>
</resources>