<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_job_item"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="18dp">

    <ImageView
        android:id="@+id/withdraw_cancel_iv"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_wd_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:padding="12dp"
        android:src="@drawable/icon_cancel_light_red" />

    <TextView
        android:id="@+id/wd_text_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/withdraw_application"
        android:textAppearance="@style/TextAppearance.AppCompat.DetFragmentTextAppearanceExtraBold.AppliedFragment"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/withdraw_cancel_iv" />

    <TextView
        android:id="@+id/wd_text_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/are_you_sure_you_want_to_withdraw_your_application_for_this_job"
        app:layout_constraintTop_toBottomOf="@id/wd_text_v1"
        android:textAppearance="@style/TextAppearance.AppCompat.JobItemTextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/withdraw_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wd_text_v2"
        android:layout_marginTop="20dp"
        android:text="@string/yes_withdraw"
        android:textAppearance="@style/TextAppearance.AppCompat.JobItemTextAppearance"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:backgroundTint="@color/light_red"
        app:rippleColor="@color/light_red_darker"
        app:cornerRadius="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/withdraw_disagree_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/withdraw_confirm_btn"
        android:layout_marginTop="2dp"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.JobItemTextAppearance"
        android:textColor="@color/withdraw_text_btn"
        android:textStyle="bold"
        android:textSize="15sp"
        android:backgroundTint="@color/withdraw_bg_btn"
        app:rippleColor="@color/withdraw_bg_btn_darker"
        app:cornerRadius="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>